src/test/testFiles/invalid/semanticErrors/invalidStringType.val
let x: char = "string"
let y: string = 'a'